Add pursuer evader simulator

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 											<article style="height:100%; display:flex; flex-direction:column; justify-content:space-between;">
 												<a href="https://github.com/EnriqManComp/LA_crime_project" class="image"><img src="images/projects/LAPD Crime Data Analysis.webp" alt="LAPD Crime Analysis" style="width:100%; height:200px; object-fit:cover;" /></a>
 												<h3>Los Angeles Crime Analysis</h3>
-												<p><strong>Skills:</strong> Data Analysis · SQL · Tableau · Python </p>
+												<p><strong>Skills:</strong> Data Analysis • SQL • Tableau • Python </p>
 												<p> With this project, we seek to identify trends, patterns, and high-risk areas to enhance law enforcement strategies, improve public safety measures, and provide comparative analyses of crime trends in other cities. </p>
 												<ul class="actions">
 													<li><a href="https://github.com/EnriqManComp/LA_crime_project" class="button"> Details </a></li>
@@ -98,7 +98,7 @@
 											<article style="height:100%; display:flex; flex-direction:column; justify-content:space-between;">
 												<a href="https://github.com/EnriqManComp/real-estate-data-warehouse.git" class="image"><img src="images/projects/real-estate-data-warehouse.png" alt="Real Estate Data Warehouse" style="width:100%; height:200px; object-fit:cover;" /></a>
 												<h3>Real Estate Data Warehouse & ETL</h3>
-												<p><strong>Skills:</strong> Data Engineering · SQL · Airflow · Python · Power BI </p>
+												<p><strong>Skills:</strong> Data Engineering • SQL • Airflow • Python • Power BI </p>
 												<p style="text-align:justify;">
 													Designed and implemented a data warehouse for real estate sales, 
 													including schema design, API integration, data preprocessing, and SQL-based transformations.
@@ -116,8 +116,8 @@
 										<td style="vertical-align:top; padding:12px;">
 											<article style="height:100%; display:flex; flex-direction:column; justify-content:space-between;">
 												<a href="https://www.kaggle.com/code/enriquecompanioni/dog-breed-classification-using-resnet-inceptionv3" class="image"><img src="images/dog breed classification.jpg" alt="Dog Breed Classification" style="width:100%; height:200px; object-fit:cover;" /></a>
-												<h3>Dog Breed Classification (ResNet · InceptionV3)</h3>
-												<p><strong>Skills:</strong> Transfer Learning · PyTorch · Machine Learning </p>
+												<h3>Dog Breed Classification (ResNet + InceptionV3)</h3>
+												<p><strong>Skills:</strong> Transfer Learning • PyTorch • Machine Learning </p>
 												<p>Hybrid approach using pretrained architectures to extract robust features and build a high-performing breed classifier — includes experimentation notebooks and model comparison.</p>
 												<ul class="actions">
 													<li><a href="https://www.kaggle.com/code/enriquecompanioni/dog-breed-classification-using-resnet-inceptionv3" class="button">Details</a></li>
@@ -129,7 +129,7 @@
 											<article style="height:100%; display:flex; flex-direction:column; justify-content:space-between;">
 												<a href="https://www.kaggle.com/code/enriquecompanioni/mango-leaf-disease-classification" class="image"><img src="images/projects/Mango leaf Disease.png" alt="Mango Leaf Disease" style="width:100%; height:200px; object-fit:cover;" /></a>
 												<h3>Mango Leaf Disease Classification</h3>
-												<p><strong>Skills:</strong> CNN · Grad-CAM · OpenCV </p>
+												<p><strong>Skills:</strong> CNN • Grad-CAM • OpenCV </p>
 												<p>Multiclass disease classifier for mango leaves using CNNs, explainability (Grad-CAM) and feature extraction techniques to support agricultural diagnostics.</p>
 												<ul class="actions">
 													<li><a href="https://www.kaggle.com/code/enriquecompanioni/mango-leaf-disease-classification" class="button">Details</a></li>
@@ -140,10 +140,10 @@
 
 									<tr style="background-color:white; border: none;">
 										<td style="vertical-align:top; padding:12px;">
-											<article>
-												<a href="https://github.com/EnriqManComp/Efficient-Automation-of-Recipe-Selection-Boosting-Traffic-with-Machine-Learning" class="image"><img src="images/projects/Recipe_Website_Image.png" alt="Recipe Website Project" style="width:100%; height:auto;" /></a>
+											<article style="height:100%; display:flex; flex-direction:column; justify-content:space-between;">
+												<a href="https://github.com/EnriqManComp/Efficient-Automation-of-Recipe-Selection-Boosting-Traffic-with-Machine-Learning" class="image"><img src="images/projects/Recipe_Website_Image.png" alt="Recipe Website Project" style="width:100%; height:200px; object-fit:cover;" /></a>
 												<h3>Efficient Automation of Recipe Selection Boosting Traffic with Machine-Learning</h3>
-												<p><strong>Skills:</strong> Data Analysis · Data Science · Classification · Data Visualization </p>
+												<p><strong>Skills:</strong> Data Analysis • Data Science • Classification • Data Visualization </p>
 												<p>This project automates the recipe selection process to increase traffic on a fictional recipe website by implementing a machine learning solution.</p>
 												<ul class="actions">
 													<li><a href="https://github.com/EnriqManComp/Efficient-Automation-of-Recipe-Selection-Boosting-Traffic-with-Machine-Learning" class="button">Details</a></li>
@@ -152,7 +152,20 @@
 										</td>
 
 										<td style="vertical-align:top; padding:12px;">
-											
+											<article style="height:100%; display:flex; flex-direction:column; justify-content:space-between;">
+												<a href="#" class="image"><img src="images/projects/Pursuer Evader Simulator.png" alt="Pursuer Evader Simulator" style="width:100%; height:200px; object-fit:cover;" /></a>
+												<h3>Pursuer-Evader Simulator</h3>
+												<p><strong>Skills:</strong> Deep Reinforcement Learning • Agentic AI • Recommendation System • Simulation • Python • C# • Robotics • Unity </p>
+												<p>
+													Developed a 2D simulation framework to study pursuit–evasion dynamics between autonomous agents.
+													 Built in Unity and integrated with Python, the environment enables training agents with various reinforcement learning
+													  algorithms to develop strategic behaviors. The simulator includes LiDAR-based perception, differential drive kinematics,
+													   and an aerial camera system. 
+													</p>
+												<ul class="actions">
+													<li><a href="#" class="button">Details</a></li>
+												</ul>
+											</article>
 										</td>
 									</tr>
 								</table>
