--- a/index.html
+++ b/index.html
@@ -168,6 +168,23 @@
 											</article>
 										</td>
 									</tr>
+									<tr style="background-color:white; border: none;">
+										<td style="vertical-align:top; padding:12px;">
+											<article style="height:100%; display:flex; flex-direction:column; justify-content:space-between;">
+												<a href="https://github.com/EnriqManComp/earthquake-lakehouse-azure-databricks.git" class="image"><img src="images/projects/earthquake project.png" alt="Earthquake Azure Databricks Project" style="width:100%; height:200px; object-fit:cover;" /></a>
+												<h3>Earthquake Lakehouse on Azure & Databricks</h3>
+												<p><strong>Skills:</strong> Data Engineering • Azure • Databricks • Data Analysis </p>
+												<p>End-to-end Earthquake Data Engineering project using Azure and Databricks with a Medallion Lakehouse architecture.</p>
+												<ul class="actions">
+													<li><a href="https://github.com/EnriqManComp/earthquake-lakehouse-azure-databricks.git" class="button">Details</a></li>
+												</ul>
+											</article>
+										</td>
+
+										<td style="vertical-align:top; padding:12px;">
+											
+										</td>
+									</tr>
 								</table>
 							
 							<div style="text-align: center;">
