--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 										</p>
 										<ul class="actions">									
 											<li><a href="experience.html" class="button big"> Experience </a></li>
-											<li><a href="#" class="button big"> CV </a></li>
+											<li><a href="cv-doc/CV_Enrique_Companioni.pdf" class="button big" target="_blank" rel="noopener noreferrer"> CV </a></li>
 										</ul>
 									</div>
 									<span class="image object">
