--- a/experience.html
+++ b/experience.html
@@ -10,9 +10,17 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
         
 	</head>
 	<body class="is-preload">
+            <button class="home-button" onclick="window.location.href='index.html'">
+                <i class="fa-solid fa-house"></i>
+            </button>
+
+            <button class="scroll-up-button"> 
+                <i class="arrow-up"></i>
+            </button>
 
 		<!-- Wrapper -->
 			<div id="wrapper">
@@ -155,31 +163,7 @@
 									</ul>
 								</nav>
 
-							<!-- Section -->
-								<!---
-								<section>
-									<header class="major">
-										<h2>Ante interdum</h2>
-									</header>
-									<div class="mini-posts">
-										<article>
-											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic08.jpg" alt="" /></a>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic09.jpg" alt="" /></a>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
-										</article>
-									</div>
-									<ul class="actions">
-										<li><a href="#" class="button">More</a></li>
-									</ul>
-								</section>
-								--->
+							
 
 							<!-- Section -->
 								<section>
@@ -212,6 +196,15 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+            <script>
+				const btn = document.querySelector(".scroll-up-button");
+				btn.addEventListener("click", () => {
+					document.documentElement.scrollTo({
+						top: 0,
+						behavior: "smooth",
+					});
+				});
+			</script>
 
 	</body>
 </html>
