--- a/more_about_me.html
+++ b/more_about_me.html
@@ -10,8 +10,16 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 	</head>
 	<body class="is-preload">
+			<button class="home-button" onclick="window.location.href='index.html'">
+				<i class="fa-solid fa-house"></i>
+			</button>
+
+			<button class="scroll-up-button"> 
+				<i class="arrow-up"></i>
+			</button>
 
 		<!-- Wrapper -->
 			<div id="wrapper">
@@ -147,6 +155,15 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+			<script>
+				const btn = document.querySelector(".scroll-up-button");
+				btn.addEventListener("click", () => {
+					document.documentElement.scrollTo({
+						top: 0,
+						behavior: "smooth",
+					});
+				});
+			</script>
 
 	</body>
 </html>
