Adding NOPD Project

--- a/index.html
+++ b/index.html
@@ -86,12 +86,12 @@
 									<tr style="background-color:white; border: none;">
 										<td style="vertical-align:top; padding:12px; width:50%;">
 											<article style="height:100%; display:flex; flex-direction:column; justify-content:space-between;">
-												<a href="https://github.com/EnriqManComp/LA_crime_project" class="image"><img src="images/projects/LAPD Crime Data Analysis.webp" alt="LAPD Crime Analysis" style="width:100%; height:200px; object-fit:cover;" /></a>
-												<h3>Los Angeles Crime Analysis</h3>
-												<p><strong>Skills:</strong> Data Analysis • SQL • Tableau • Python </p>
-												<p> With this project, we seek to identify trends, patterns, and high-risk areas to enhance law enforcement strategies, improve public safety measures, and provide comparative analyses of crime trends in other cities. </p>
+												<a href="https://github.com/EnriqManComp/nopd_analysis/tree/master" class="image"><img src="images/projects/NOPD.png" alt="New Orleans Police Department Data Analysis" style="width:100%; height:200px; object-fit:cover;" /></a>
+												<h3>New Orleans Police Department Data Analysis</h3>
+												<p><strong>Skills:</strong> Data Analysis • Power BI • SQL • Python </p>
+												<p> This project analyzes public police reports from the New Orleans Open Data Portal, focusing on trends, patterns, and actionable insights derived from incidents reported by the New Orleans Police Department (NOPD). </p>
 												<ul class="actions">
-													<li><a href="https://github.com/EnriqManComp/LA_crime_project" class="button"> Details </a></li>													
+													<li><a href="https://github.com/EnriqManComp/nopd_analysis/tree/master" class="button"> Details </a></li>													
 												</ul>
 											</article>
 										</td>
@@ -184,6 +184,15 @@
 										</td>
 
 										<td style="vertical-align:top; padding:12px;">
+											<article style="height:100%; display:flex; flex-direction:column; justify-content:space-between;">
+												<a href="https://github.com/EnriqManComp/LA_crime_project" class="image"><img src="images/projects/LAPD Crime Data Analysis.webp" alt="LAPD Crime Analysis" style="width:100%; height:200px; object-fit:cover;" /></a>
+												<h3>Los Angeles Crime Analysis</h3>
+												<p><strong>Skills:</strong> Data Analysis • SQL • Tableau • Python </p>
+												<p> With this project, we seek to identify trends, patterns, and high-risk areas to enhance law enforcement strategies, improve public safety measures, and provide comparative analyses of crime trends in other cities. </p>
+												<ul class="actions">
+													<li><a href="https://github.com/EnriqManComp/LA_crime_project" class="button"> Details </a></li>													
+												</ul>
+											</article>
 											
 										</td>
 									</tr>
