Adding blank target to links

--- a/index.html
+++ b/index.html
@@ -86,19 +86,19 @@
 									<tr style="background-color:white; border: none;">
 										<td style="vertical-align:top; padding:12px; width:50%;">
 											<article style="height:100%; display:flex; flex-direction:column; justify-content:space-between;">
-												<a href="https://github.com/EnriqManComp/nopd_analysis/tree/master" class="image"><img src="images/projects/NOPD.png" alt="New Orleans Police Department Data Analysis" style="width:100%; height:200px; object-fit:cover;" /></a>
+												<a href="https://github.com/EnriqManComp/nopd_analysis/tree/master" class="image" target="_blank"><img src="images/projects/NOPD.png" alt="New Orleans Police Department Data Analysis" style="width:100%; height:200px; object-fit:cover;" /></a>
 												<h3>New Orleans Police Department Data Analysis</h3>
 												<p><strong>Skills:</strong> Data Analysis • Power BI • SQL • Python </p>
 												<p> This project analyzes public police reports from the New Orleans Open Data Portal, focusing on trends, patterns, and actionable insights derived from incidents reported by the New Orleans Police Department (NOPD). </p>
 												<ul class="actions">
-													<li><a href="https://github.com/EnriqManComp/nopd_analysis/tree/master" class="button"> Details </a></li>													
+													<li><a href="https://github.com/EnriqManComp/nopd_analysis/tree/master" class="button" target="_blank"> Details </a></li>													
 												</ul>
 											</article>
 										</td>
 
 										<td style="vertical-align:top; padding:12px; width:50%;">
 											<article style="height:100%; display:flex; flex-direction:column; justify-content:space-between;">
-												<a href="https://github.com/EnriqManComp/real-estate-data-warehouse.git" class="image"><img src="images/projects/real-estate-data-warehouse.png" alt="Real Estate Data Warehouse" style="width:100%; height:200px; object-fit:cover;" /></a>
+												<a href="https://github.com/EnriqManComp/real-estate-data-warehouse.git" class="image" target="_blank"><img src="images/projects/real-estate-data-warehouse.png" alt="Real Estate Data Warehouse" style="width:100%; height:200px; object-fit:cover;" /></a>
 												<h3>Real Estate Data Warehouse & ETL</h3>
 												<p><strong>Skills:</strong> Data Engineering • SQL • Airflow • Python • Power BI </p>
 												<p style="text-align:justify;">
@@ -108,7 +108,7 @@
 													data quality checks, and pipeline monitoring with Flower API.
 													Built a Data Engineering dashboard to track pipeline reliability and performance.</p>
 												<ul class="actions">
-													<li><a href="https://github.com/EnriqManComp/real-estate-data-warehouse.git" class="button"> Details </a></li>
+													<li><a href="https://github.com/EnriqManComp/real-estate-data-warehouse.git" class="button" target="_blank"> Details </a></li>
 												</ul>
 											</article>											
 										</td>
@@ -117,24 +117,24 @@
 									<tr style="background-color:white; border: none;">
 										<td style="vertical-align:top; padding:12px;">
 											<article style="height:100%; display:flex; flex-direction:column; justify-content:space-between;">
-												<a href="https://www.kaggle.com/code/enriquecompanioni/dog-breed-classification-using-resnet-inceptionv3" class="image"><img src="images/dog breed classification.jpg" alt="Dog Breed Classification" style="width:100%; height:200px; object-fit:cover;" /></a>
+												<a href="https://www.kaggle.com/code/enriquecompanioni/dog-breed-classification-using-resnet-inceptionv3" class="image" target="_blank"><img src="images/dog breed classification.jpg" alt="Dog Breed Classification" style="width:100%; height:200px; object-fit:cover;" /></a>
 												<h3>Dog Breed Classification (ResNet + InceptionV3)</h3>
 												<p><strong>Skills:</strong> Transfer Learning • PyTorch • Machine Learning </p>
 												<p>Hybrid approach using pretrained architectures to extract robust features and build a high-performing breed classifier — includes experimentation notebooks and model comparison.</p>
 												<ul class="actions">
-													<li><a href="https://www.kaggle.com/code/enriquecompanioni/dog-breed-classification-using-resnet-inceptionv3" class="button">Details</a></li>
+													<li><a href="https://www.kaggle.com/code/enriquecompanioni/dog-breed-classification-using-resnet-inceptionv3" class="button" target="_blank">Details</a></li>
 												</ul>
 											</article>
 										</td>
 
 										<td style="vertical-align:top; padding:12px;">
 											<article style="height:100%; display:flex; flex-direction:column; justify-content:space-between;">
-												<a href="https://www.kaggle.com/code/enriquecompanioni/mango-leaf-disease-classification" class="image"><img src="images/projects/Mango leaf Disease.png" alt="Mango Leaf Disease" style="width:100%; height:200px; object-fit:cover;" /></a>
+												<a href="https://www.kaggle.com/code/enriquecompanioni/mango-leaf-disease-classification" class="image" target="_blank"><img src="images/projects/Mango leaf Disease.png" alt="Mango Leaf Disease" style="width:100%; height:200px; object-fit:cover;" /></a>
 												<h3>Mango Leaf Disease Classification</h3>
 												<p><strong>Skills:</strong> CNN • Grad-CAM • OpenCV </p>
 												<p>Multiclass disease classifier for mango leaves using CNNs, explainability (Grad-CAM) and feature extraction techniques to support agricultural diagnostics.</p>
 												<ul class="actions">
-													<li><a href="https://www.kaggle.com/code/enriquecompanioni/mango-leaf-disease-classification" class="button">Details</a></li>
+													<li><a href="https://www.kaggle.com/code/enriquecompanioni/mango-leaf-disease-classification" class="button" target="_blank">Details</a></li>
 												</ul>
 											</article>											
 										</td>
@@ -143,19 +143,19 @@
 									<tr style="background-color:white; border: none;">
 										<td style="vertical-align:top; padding:12px;">
 											<article style="height:100%; display:flex; flex-direction:column; justify-content:space-between;">
-												<a href="https://github.com/EnriqManComp/Efficient-Automation-of-Recipe-Selection-Boosting-Traffic-with-Machine-Learning" class="image"><img src="images/projects/Recipe_Website_Image.png" alt="Recipe Website Project" style="width:100%; height:200px; object-fit:cover;" /></a>
+												<a href="https://github.com/EnriqManComp/Efficient-Automation-of-Recipe-Selection-Boosting-Traffic-with-Machine-Learning" class="image" target="_blank"><img src="images/projects/Recipe_Website_Image.png" alt="Recipe Website Project" style="width:100%; height:200px; object-fit:cover;" /></a>
 												<h3>Efficient Automation of Recipe Selection Boosting Traffic with Machine-Learning</h3>
 												<p><strong>Skills:</strong> Data Analysis • Data Science • Classification • Data Visualization </p>
 												<p>This project automates the recipe selection process to increase traffic on a fictional recipe website by implementing a machine learning solution.</p>
 												<ul class="actions">
-													<li><a href="https://github.com/EnriqManComp/Efficient-Automation-of-Recipe-Selection-Boosting-Traffic-with-Machine-Learning" class="button">Details</a></li>
+													<li><a href="https://github.com/EnriqManComp/Efficient-Automation-of-Recipe-Selection-Boosting-Traffic-with-Machine-Learning" class="button" target="_blank">Details</a></li>
 												</ul>
 											</article>
 										</td>
 
 										<td style="vertical-align:top; padding:12px;">
 											<article style="height:100%; display:flex; flex-direction:column; justify-content:space-between;">
-												<a href="#" class="image"><img src="images/projects/Pursuer Evader Simulator.png" alt="Pursuer Evader Simulator" style="width:100%; height:200px; object-fit:cover;" /></a>
+												<a href="#" class="image" target="_blank"><img src="images/projects/Pursuer Evader Simulator.png" alt="Pursuer Evader Simulator" style="width:100%; height:200px; object-fit:cover;" /></a>
 												<h3>Pursuer-Evader Simulator</h3>
 												<p><strong>Skills:</strong> Deep Reinforcement Learning • Agentic AI • Recommendation System • Simulation • Python • C# • Robotics • Unity </p>
 												<p>
@@ -165,7 +165,7 @@
 													   and an aerial camera system. 
 													</p>
 												<ul class="actions">
-													<li><a href="#" class="button">Details</a></li>
+													<li><a href="#" class="button" target="_blank">Details</a></li>
 												</ul>
 											</article>
 										</td>
@@ -173,24 +173,24 @@
 									<tr style="background-color:white; border: none;">
 										<td style="vertical-align:top; padding:12px;">
 											<article style="height:100%; display:flex; flex-direction:column; justify-content:space-between;">
-												<a href="https://github.com/EnriqManComp/earthquake-lakehouse-azure-databricks.git" class="image"><img src="images/projects/earthquake project.png" alt="Earthquake Azure Databricks Project" style="width:100%; height:200px; object-fit:cover;" /></a>
+												<a href="https://github.com/EnriqManComp/earthquake-lakehouse-azure-databricks.git" class="image" target="_blank"><img src="images/projects/earthquake project.png" alt="Earthquake Azure Databricks Project" style="width:100%; height:200px; object-fit:cover;" /></a>
 												<h3>Earthquake Lakehouse on Azure & Databricks</h3>
 												<p><strong>Skills:</strong> Data Engineering • Azure • Databricks • Data Analysis </p>
 												<p>End-to-end Earthquake Data Engineering project using Azure and Databricks with a Medallion Lakehouse architecture.</p>
 												<ul class="actions">
-													<li><a href="https://github.com/EnriqManComp/earthquake-lakehouse-azure-databricks.git" class="button">Details</a></li>
+													<li><a href="https://github.com/EnriqManComp/earthquake-lakehouse-azure-databricks.git" class="button" target="_blank">Details</a></li>
 												</ul>
 											</article>
 										</td>
 
 										<td style="vertical-align:top; padding:12px;">
 											<article style="height:100%; display:flex; flex-direction:column; justify-content:space-between;">
-												<a href="https://github.com/EnriqManComp/LA_crime_project" class="image"><img src="images/projects/LAPD Crime Data Analysis.webp" alt="LAPD Crime Analysis" style="width:100%; height:200px; object-fit:cover;" /></a>
+												<a href="https://github.com/EnriqManComp/LA_crime_project" class="image" target="_blank"><img src="images/projects/LAPD Crime Data Analysis.webp" alt="LAPD Crime Analysis" style="width:100%; height:200px; object-fit:cover;" /></a>
 												<h3>Los Angeles Crime Analysis</h3>
 												<p><strong>Skills:</strong> Data Analysis • SQL • Tableau • Python </p>
 												<p> With this project, we seek to identify trends, patterns, and high-risk areas to enhance law enforcement strategies, improve public safety measures, and provide comparative analyses of crime trends in other cities. </p>
 												<ul class="actions">
-													<li><a href="https://github.com/EnriqManComp/LA_crime_project" class="button"> Details </a></li>													
+													<li><a href="https://github.com/EnriqManComp/LA_crime_project" class="button" target="_blank"> Details </a></li>													
 												</ul>
 											</article>
 											
