--- a/index.html
+++ b/index.html
@@ -369,6 +369,7 @@
 										<li><a href="education.html"> Education </a></li>
 										<li><a href="experience.html"> Experience </a></li>
 										<li><a href="projects.html">More Projects</a></li>
+										<li><a href="blog.html">Blogs</a></li>
 										
 										
 									</ul>
