--- a/blog.html
+++ b/blog.html
@@ -75,8 +75,13 @@
 												<a href="articles\AWS Cloud Practitioner\AWS Cloud Practitioner Cert - Compute Modules\AWS Cloud Practitioner Certification Compute Modules.html", target="_blank">
 												 Cloud Practitioner - Compute Modules 
 												</a>
-											</td>																	
-											
+											</td></tr>																
+											<tr class="py-1">
+											<td> 
+												<a href="articles\AWS Cloud Practitioner\AWS Cloud Practitioner Cert - Global Infrastructure\AWS Cloud Practitioner Certification AWS Global Infrastructure.html", target="_blank">
+												 Cloud Practitioner - Global Infrastructure 
+												</a>
+											</td></tr>
 
 										</tbody>
 										</table>
