Adding AWS Networking blog

--- a/blog.html
+++ b/blog.html
@@ -82,6 +82,12 @@
 												 Cloud Practitioner - Global Infrastructure 
 												</a>
 											</td></tr>
+											<tr class="py-1">
+											<td> 
+												<a href="articles\AWS Cloud Practitioner\AWS Cloud Practitioner Cert - Networking\AWS Cloud Practitioner Certification Networking.html", target="_blank">
+												 Cloud Practitioner - Global Infrastructure 
+												</a>
+											</td></tr>
 
 										</tbody>
 										</table>
