--- a/blog.html
+++ b/blog.html
@@ -85,7 +85,7 @@
 											<tr class="py-1">
 											<td> 
 												<a href="articles\AWS Cloud Practitioner\AWS Cloud Practitioner Cert - Networking\AWS Cloud Practitioner Certification Networking.html", target="_blank">
-												 Cloud Practitioner - Global Infrastructure 
+												 Cloud Practitioner - Networking
 												</a>
 											</td></tr>
 
