--- a/blog.html
+++ b/blog.html
@@ -88,6 +88,18 @@
 												 Cloud Practitioner - Networking
 												</a>
 											</td></tr>
+											<tr class="py-1">
+											<td> 
+												<a href="articles\AWS Cloud Practitioner\AWS Cloud Practitioner Cert - Storage Overview\AWS Cloud Practitioner Certification Storage Overview.html", target="_blank">
+												 Cloud Practitioner - Storage Overview
+												</a>
+											</td></tr>
+											<tr class="py-1">
+											<td> 
+												<a href="articles\AWS Cloud Practitioner\AWS Cloud Practitioner Cert - Storage\AWS Cloud Practitioner Certification Storage.html", target="_blank">
+												 Cloud Practitioner - Storage
+												</a>
+											</td></tr>
 
 										</tbody>
 										</table>
